big improvments schema
